# AI_Clinent_Core

./: .gitignore  Cargo.toml
examples/: llm.rs  llm_ai_dialogue.rs  main.rs
examples/senses/: llm_a.rs  llm_b.rs  militech_acs.rs  mod.rs
plugins/: plugin.fcplug
src/: client.rs  http_poster.rs  lib.rs  loaded.rs  manager.rs  scanner.rs  types.rs
src/llm/: mod.rs  sense.rs  session.rs  stream_decoder.rs  tool.rs  types.rs
src/orchestrator/: context.rs  mod.rs  orchestrator.rs
src/plugin/: loaded.rs  manager.rs  mod.rs  scanner.rs  types.rs
src/sense/: mod.rs
src/tool/: mod.rs  registry.rs
wit/: plugin - 副本.txt  plugin.wit
