[package]
name = "flowcloudai_client_core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
wasmtime = { version = "42.0.1", features = ["component-model"] }
anyhow = "1.0.102"
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"
zip = "8.2.0"
wasmtime-wasi = "42"