[package]
name = "flowcloudai_client"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 1
incremental = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
wasmtime = { version = "42.0.1", features = ["component-model"] }
anyhow = "1.0.102"
reqwest = { version = "0.13.2", features = ["json", "stream", "gzip"] }
serde_json = "1.0.149"
zip = "8.2.0"
wasmtime-wasi = "42"
futures-util = "0.3"
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
tokio = { version = "1.36", features = ["full"] }
chrono = "0.4.44"